Squashing bug in .active css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,5 +54,5 @@ h1, h2 {
 }
 
 .active {
-    border=bottom: 1px solid #3a3a3a;
+    border-bottom: 1px solid #3a3a3a;
 }
